--- a/文本三剑客.md
+++ b/文本三剑客.md
@@ -649,3 +649,27 @@ notpad++
 引用整个匹配:$&
 ~~~
 
+# 附录:
+
+## 处理多行数据
+
+~~~shell
+awk '/^table:/{table=$1} /^p1=/{p1=$1} /^p2=/{p2=$1} {if (table && p1 && p2) print "Table: "table", P1: "p1", P2: "p2; table=p1=p2=""}' conf.txt
+~~~
+
+## 求和
+
+~~~shell
+awk 'BEGIN{sum=0}{num=substr($0,1,2);sum+=num; }END{print sum;}'
+~~~
+
+## 取出sql中字段类型
+
+~~~shell
+cat abc.sql |tr -d "\n"|grep -oP "\(.*?\)"|head -n 1|sed -r "s/\(|\)//g"|tr "," "\n"|sed -r "s/^ +| +$//g"|sed -r "s/ +/\t/">tmp1.txt
+~~~
+
+~~~shell
+cat abc.sql |awk 'BEGIN{IS_BEGIN=0;IS_END=0;}/\(/{IS_BEGIN=1}/)/{IS_END=1}{if(IS_BEGIN==1 && IS_END==0){print $0} }'|grep -v "TABLE"|sed -r "s/^ +| +$|,//g;s/ +/\t/g">tmp1.txt
+~~~
+
