随便写点东西

--- a/备忘录.md
+++ b/备忘录.md
@@ -298,6 +298,18 @@ C:\devtools\vcpkg\installed\x64-windows\debug\lib
 cl /EHsc /Fe:abc.exe .\test1.cpp
 ~~~
 
+# C语言内容模型
+
+~~~shell
+header：可执行程序的头部分，保存可执行程序的信息，各个段的内存地址。
+text段：保存汇编后的代码（只读）
+rodata段：不会改变的常量（字符串，常量数组）（只读）
+data段：全局初始化变量区（可读可写）
+bss段：全局未初始化变量（可读可写）
+
+执行后，将这些段加载到内存中，并新增堆栈内存结构。
+~~~
+
 # Rust创建工作空间
 
 新建文件Cargo.toml
