--- a/文本三剑客.md
+++ b/文本三剑客.md
@@ -628,7 +628,14 @@ seq 10 | grep "5" -C 3
 8
 ~~~
 
+# 文件查找
 
+~~~shell
+find 在磁盘找任何文件
+locate 在数据库找任何文件
+whereis 在数据库中找可执行文件
+which 在path下找第一个可执行文件
+~~~
 
 # 正则表达式
 
@@ -671,5 +678,17 @@ cat abc.sql |tr -d "\n"|grep -oP "\(.*?\)"|head -n 1|sed -r "s/\(|\)//g"|tr "," 
 
 ~~~shell
 cat abc.sql |awk 'BEGIN{IS_BEGIN=0;IS_END=0;}/\(/{IS_BEGIN=1}/)/{IS_END=1}{if(IS_BEGIN==1 && IS_END==0){print $0} }'|grep -v "TABLE"|sed -r "s/^ +| +$|,//g;s/ +/\t/g">tmp1.txt
+~~~
+
+## 获取字符串所在行行号
+
+~~~shell
+sed -n "/abc/="输出行号
+~~~
+
+## sed格式
+
+~~~shell
+sed "开始行，结束行/匹配行/s/匹配内容/替换内容/g"
 ~~~
 
